--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body {
+    font-size: 1em;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: #fff;
     background: #171717;
     display: block;
     margin: 0 auto 4em;
-    padding: 0 1em;
+    padding: 0 0.5em;
     max-width: 40em;
 }
 .main {
@@ -24,7 +25,9 @@ body {
     font-size: 0.9375em;
     width: 5em;
 }
-#option-njs-scale {
+select {
+    padding: 0.125em;
+    font-size: 0.9375em;
     width: auto;
 }
 table {
