random pattern generator
and bunch of other refactoring i think

--- a/style.css
+++ b/style.css
@@ -46,6 +46,9 @@ th {
     min-width: 4em;
     font-size: 1.125em;
 }
+.table-center {
+    margin: 0 auto;
+}
 .table-first {
     text-align: left;
     padding-right: 1em;
@@ -82,4 +85,65 @@ th {
 }
 .diff-count-5 {
     width: 4.2em;
+}
+.button {
+    width: auto;
+}
+.table-grid {
+    border: 1px solid white;
+    border-collapse: collapse;
+}
+.table-rpattern-image {
+    text-align: center;
+    justify-content: center;
+    vertical-align: middle;
+}
+.deg45 {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+.deg90 {
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+}
+.deg135 {
+    -webkit-transform: rotate(135deg);
+    -moz-transform: rotate(135deg);
+    -o-transform: rotate(135deg);
+    -ms-transform: rotate(135deg);
+    transform: rotate(135deg);
+}
+.deg180 {
+    -webkit-transform: rotate(180deg);
+    -moz-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    transform: rotate(180deg);
+}
+.deg225 {
+    -webkit-transform: rotate(225deg);
+    -moz-transform: rotate(225deg);
+    -o-transform: rotate(225deg);
+    -ms-transform: rotate(225deg);
+    transform: rotate(225deg);
+}
+.deg270 {
+    -webkit-transform: rotate(270deg);
+    -moz-transform: rotate(270deg);
+    -o-transform: rotate(270deg);
+    -ms-transform: rotate(270deg);
+    transform: rotate(270deg);
+}
+.deg315 {
+    -webkit-transform: rotate(315deg);
+    -moz-transform: rotate(315deg);
+    -o-transform: rotate(315deg);
+    -ms-transform: rotate(315deg);
+    transform: rotate(315deg);
 }
