--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ import RandomPatternGenerator from '../components/RandomPatternGenerator';
       </nav>
       <div id="map-tools">
          <h2>Map Tools</h2>
-          For extensive mapping tool, visit <a href="./tool">map tool page</a>.
+          Work-in-progress.
       </div>
       <EBPM client:load />
       <hr />
