Custom color save

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,28 +17,40 @@ import RandomPatternGenerator from '../components/RandomPatternGenerator';
             <div><a href="#map-tools">Map Tools</a></div>
             <div><a href="#ebpm-precision">EBPM & Precision</a></div>
             <div><a href="#njs-calculator">NJS Calculator</a></div>
+            <div><a href="#color-picker">Color Picker</a></div>
             <div><a href="#score-calculator">Score Calculator</a></div>
             <div><a href="#sps-difference">SPS Difference</a></div>
             <div><a href="#difficulty-label">Difficulty Label</a></div>
-            <div><a href="#color-picker">Color Picker</a></div>
             <div><a href="#random-pattern">Random Pattern Generator</a></div>
          </div>
       </nav>
       <div id="map-tools">
          <h2>Map Tools</h2>
-          Work-in-progress.
+          Work-in-progress, planned features:
+         <ul>
+            <li>Tempo Changer</li>
+            <li>Offset Remover</li>
+            <li>Copy Timing</li>
+            <li>Copy Lighting/Environment</li>
+            <li>Map Diff</li>
+            <li>Map Version Convert</li>
+            <li>Event V1 to V2 Convert</li>
+            <li>Chroma Gradient Convert</li>
+            <li>Custom Data Patch</li>
+         </ul>
       </div>
+      <hr />
       <EBPM client:load />
       <hr />
       <NJSCalculator client:load />
+      <hr />
+      <ColorPicker client:load />
       <hr />
       <ScoreCalculator client:load />
       <hr />
       <SPSDifference client:load />
       <hr />
       <DifficultyLabel client:load />
-      <hr />
-      <ColorPicker client:load />
       <hr />
       <RandomPatternGenerator client:load />
    </div>
