--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -12,7 +12,7 @@ const permalink = 'https://kivalevan.me/BeatSaber-MappingUtility/';
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width" />
       <meta name="theme-color" content="#ee0000" />
-      <link rel="shortcut icon" type="image/png" href="/assets/favicon.png" />
+      <link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
       <link href="https://fonts.googleapis.com/css?family=Teko" rel="stylesheet" />
       <meta name="generator" content={Astro.generator} />
 
@@ -26,19 +26,20 @@ const permalink = 'https://kivalevan.me/BeatSaber-MappingUtility/';
       <meta property="og:url" content={permalink} />
       <meta property="og:title" content={title} />
       <meta property="og:description" content={description} />
-      <meta property="og:image" content="/assets/favicon.png" />
+      <meta property="og:image" content="./assets/favicon.png" />
 
       <!-- Twitter -->
       <meta property="twitter:card" content="summary" />
       <meta property="twitter:url" content={permalink} />
       <meta property="twitter:title" content={title} />
       <meta property="twitter:description" content={description} />
-      <meta property="twitter:image" content="/assets/favicon.png" />
+      <meta property="twitter:image" content="./assets/favicon.png" />
    </head>
    <body>
       <main>
          <h1>Beat Saber Mapping Utility</h1>
-         <noscript>This a web-app, Javascript is required for the Mapping Utility to work.</noscript>
+         <noscript>This a web-app, Javascript is required for the Mapping Utility to work.</noscript
+         >
          <hr />
          <Watermark />
          <hr />
