--- a/src/components/Watermark.astro
+++ b/src/components/Watermark.astro
@@ -2,7 +2,7 @@
 import packJson from '../../package.json';
 
 const watermark = '@kivalevan';
-const version = 'pre-' + packJson.version + 'h';
+const version = 'pre-' + packJson.version + 'i';
 ---
 
 <div class="subpanel-right">
